--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
-Flask-Login==0.6.3
+Flask-Login==0.7.0
 Flask-SocketIO==5.4.1
-Flask-Mail==0.9.1
-Flask-WTF==1.1.1
+Flask-Mail==0.10.0
+Flask-WTF==1.2.1
 Flask-Migrate==4.0.7
 Werkzeug==3.0.4
 SQLAlchemy==2.0.36
@@ -14,7 +14,8 @@ mercadopago==2.2.0
 requests==2.31.0
 python-dateutil==2.8.2
 Jinja2==3.1.2
-WTForms==3.0.1
+MarkupSafe==2.1.5
+WTForms==3.1.2
 email-validator==2.0.0
 gunicorn==21.2.0
 eventlet==0.36.1
