--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ Jinja2==3.1.2
 WTForms==3.0.1
 email-validator==2.0.0
 gunicorn==21.2.0
-eventlet==0.33.3
+# eventlet removed due to Python 3.13 incompatibility
 psycopg2-binary==2.9.7
 redis==4.6.0
 celery==5.3.1
