--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,6 @@ Jinja2==3.1.2
 WTForms==3.0.1
 email-validator==2.0.0
 gunicorn==21.2.0
-# eventlet removed due to Python 3.13 incompatibility
-psycopg2-binary==2.9.7
-redis==4.6.0
-celery==5.3.1
 twilio==8.5.0
 openai==1.35.0
-anthropic==0.18.1 
+anthropic
