--- a/.env
+++ b/.env
@@ -1,9 +1,4 @@
-# Configuración de la aplicación
-SECRET_KEY=dev-secret-key-change-in-production
+FLASK_APP=app.py
 FLASK_ENV=development
-DATABASE_URL=sqlite:///barrio_cerrado.db
-
-# Claude API (prioridad alta para el chatbot)
+SECRET_KEY=tu-clave-secreta-aqui
 CLAUDE_API_KEY=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
-CLAUDE_MODEL=claude-4-sonnet-20250514
-
