--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,8 @@ marshmallow==3.20.2
 pytest==7.4.3
 pytest-flask==1.3.0
 pytest-cov==4.1.0
+
+# Dependencias para optimización de assets
+cssmin==0.2.0
+jsmin==3.0.1
+Pillow==10.4.0
