--- a/requirements.txt
+++ b/requirements.txt
@@ -55,3 +55,12 @@ coverage==7.3.2
 
 # Dependencias para backup
 schedule==1.2.0
+
+# Dependencias adicionales para mejoras implementadas
+Flask-Testing==0.8.1
+pytest-json-report==1.5.0
+selenium==4.15.2
+webdriver-manager==4.0.1
+Flask-Caching==2.1.0
+APScheduler==3.10.4
+marshmallow-sqlalchemy==0.29.0
