--- a/render.yaml
+++ b/render.yaml
@@ -1,30 +1,16 @@
 services:
   - type: web
-    name: portalbarriosprivados
+    name: portal-barrios-privados
     env: python
-    plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn wsgi:app
+    startCommand: gunicorn wsgi:application --bind 0.0.0.0:$PORT --workers 2 --timeout 120
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.7
       - key: FLASK_ENV
         value: production
+      - key: PYTHONPATH
+        value: .
+      - key: DATABASE_URL
+        generateValue: true
       - key: SECRET_KEY
         generateValue: true
-      - key: DATABASE_URL
-        value: sqlite:///barrio_cerrado.db
-      - key: BARRIO_NAME
-        value: Barrio Tejas 4
-      - key: BARRIO_ADDRESS
-        value: Av. Principal 1234, Ciudad
-      - key: BARRIO_PHONE
-        value: +54 11 4444-5555
-      - key: BARRIO_EMAIL
-        value: admin@tejas4.com
-      - key: NOTIFICATION_EMAIL_ENABLED
-        value: True
-      - key: NOTIFICATION_WHATSAPP_ENABLED
-        value: False
-      - key: NOTIFICATION_PUSH_ENABLED
-        value: True
+    healthCheckPath: /health
