--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: portal-barrios-privados
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn wsgi:application --bind 0.0.0.0:$PORT --workers 2 --timeout 120
+    startCommand: gunicorn wsgi:app --bind 0.0.0.0:$PORT --workers 1 --timeout 120 --threads 2
     envVars:
       - key: FLASK_ENV
         value: production
