--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask-SocketIO==5.3.6
 Flask-Mail==0.9.1
 Flask-WTF==1.1.1
 Flask-Migrate==4.0.7
+Flask-CORS==4.0.0
 Werkzeug==2.3.7
 SQLAlchemy==2.0.36
 python-dotenv==1.0.0
@@ -64,3 +65,10 @@ webdriver-manager==4.0.1
 Flask-Caching==2.1.0
 APScheduler==3.10.4
 marshmallow-sqlalchemy==0.29.0
+
+# Dependencias para mejoras de seguridad y arquitectura
+Flask-RESTful==0.3.10
+marshmallow==3.20.2
+marshmallow-sqlalchemy==0.29.0
+flask-limiter==3.5.0
+sentry-sdk[flask]==1.40.0
