--- a/requirements.txt
+++ b/requirements.txt
@@ -75,3 +75,18 @@ schedule==1.2.0
 # Dependencias para testing de interfaz
 selenium==4.15.2
 webdriver-manager==4.0.1
+
+# Dependencias para Fases 1-6 (Nuevas)
+numpy==1.24.3
+pandas==2.0.3
+matplotlib==3.7.2
+seaborn==0.12.2
+scikit-learn==1.3.0
+googlemaps==4.10.0
+docker==6.1.3
+boto3==1.28.44
+sendgrid==6.10.0
+stripe==6.6.0
+paypalrestsdk==1.13.1
+openweathermap==0.1.0
+geopy==2.3.0
