--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 FLASK_APP=app.py
 FLASK_ENV=development
 SECRET_KEY=tu-clave-secreta-aqui
-CLAUDE_API_KEY=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
+CLAUDE_API_KEY=
